Bug 43971 - [4.6 Regression] index domain error in tree-ssa-structalias.c:3450
Summary: [4.6 Regression] index domain error in tree-ssa-structalias.c:3450
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: tree-optimization (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: 4.6.0
Assignee: Richard Biener
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2010-05-03 10:21 UTC by David Binderman
Modified: 2010-05-04 17:23 UTC (History)
1 user (show)

See Also:
Host: x86_64-suse-linux
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2010-05-03 11:27:20


Attachments
gzipped C source code (198.96 KB, application/octet-stream)
2010-05-03 10:24 UTC, David Binderman
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Binderman 2010-05-03 10:21:51 UTC
I just tried to compile the Linux kernel version linux-2.6.34-rc6
with the C compiler version 4.6 snapshot 20100501 and it said

init/main.c: In function 'do_one_initcall':
init/main.c:915:1: internal compiler error: vector VEC(ce_s,base) index domain error, in do_structure_copy at tree-ssa-structalias.c:3450
Please submit a full bug report,
with preprocessed source if appropriate.
See <http://gcc.gnu.org/bugs.html> for instructions.

Preprocessed source code attached. Flags -fno-delete-null-pointer-checks -Os required.
Comment 1 David Binderman 2010-05-03 10:24:34 UTC
Created attachment 20543 [details]
gzipped C source code
Comment 2 Richard Biener 2010-05-03 11:27:20 UTC
Mine.
Comment 3 Richard Biener 2010-05-03 16:12:41 UTC
Subject: Bug 43971

Author: rguenth
Date: Mon May  3 16:12:12 2010
New Revision: 158991

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=158991
Log:
2010-05-03  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43971
	* tree-ssa-structalias.c (get_constraint_for_1): Fix
	constraints in the !flag_delete_null_pointer_checks case.

	* gcc.dg/pr43971.c: New testcase.

Added:
    trunk/gcc/testsuite/gcc.dg/pr43971.c
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/testsuite/ChangeLog
    trunk/gcc/tree-ssa-structalias.c

Comment 4 Richard Biener 2010-05-04 10:01:52 UTC
Fixed.