re PR tree-optimization/43971 (index domain error in tree-ssa-structalias.c:3450)

2010-05-03  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43971
	* tree-ssa-structalias.c (get_constraint_for_1): Fix
	constraints in the !flag_delete_null_pointer_checks case.

	* gcc.dg/pr43971.c: New testcase.

From-SVN: r158991